# BiosecurityOS

./: .env.example  .gitignore  Makefile  SAKAI_VUE_MIGRATION_PLAN.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/sql/: V001__init_schema.sql  V001__init_schema_down.sql  V002__seed_reference_data.sql
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_reference_data.py  0003_sprint03_permissions.py  0004_sprint04_permissions.py  0005_sprint05_permissions.py  0006_sprint06_permissions.py  0007_sprint08_permissions.py  0008_sprint09_permissions.py  0009_sprint10_reports_notifications.py  0010_sprint11_performance_indexes.py  0011_killer_event_attachment.py  0012_assessment_type_enum.py.bak
backend/app/: config.py  database.py  main.py  models_base.py  reset_data.py  seed.py
backend/app/assessments/: models.py  router.py  schemas.py  service.py
backend/app/attachments/: file_policy.py  models.py  router.py  schemas.py  service.py
backend/app/audit_logs/: router.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/cases/: models.py  router.py  schemas.py  service.py
backend/app/dashboards/: router.py  service.py
backend/app/farms/: models.py  router.py  schemas.py  service.py
backend/app/floorplans/: models.py  router.py  schemas.py  service.py
backend/app/lessons/: models.py  (+3 more)
backend/tests/: conftest.py  test_b018_error_pagination.py  test_b019_optimistic_lock.py  test_health.py
(+153 files in other folders)
